@@ -4,6 +4,7 @@
 	js : upgraded js.SWFObject from 1.4.4 inlined to 1.5 embedded
 	js : code generator beautify
 	all : ensure that modifying returned Type.getEnumConstructs array does not affect enum
+	all : allow macro typed parameters (other than Expr)
 
 2011-01-30: 2.07
 	all : fixed completion support with --remap
